--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "E-mail Addresses" %}</h5>
+<h5 class="logo-font mb-4 bg-dark text-white">{% trans "E-mail Addresses" %}</h5>
 <hr>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
