--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Sign In" %}</h5>
+<h1 class1="logo-font mb-4 bg-dark text-white">{% trans "Sign In" %}</h1>
 <hr>
 {% get_providers as socialaccount_providers %}
 
@@ -33,13 +33,13 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login bg-dark text-white" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <a href="{% url 'home' %}" class="btn btn-outline-black rounded-0">Home</a>
+    <a href="{% url 'home' %}" class="btn btn-secondary btn-outline-black rounded-0">Home</a>
     <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
     <p class="mt-2">
         <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
