--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Change Password" %}</h5>
+<h5 class="logo-font mb-4 bg-dark text-white">{% trans "Change Password" %}</h5>
 <hr>
 {% trans "Sign Out" %}
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
