--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h5>
+<h1 class="logo-font mb-4 text-white">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 <hr>
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
