--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Set Password" %}</h5>
+<h1 class="logo-font mb-4 text-white">{% trans "Set Password" %}</h1>
 <hr>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
