--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Sign Up" %}</h5>
+<h1 class="logo-font mb-4 text-white">{% trans "Sign Up" %}</h1>
 <hr>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
