--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Sign Up Closed" %}</h5>
+<h1 class="logo-font mb-4 text-white">{% trans "Sign Up Closed" %}</h1>
 <hr>
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
