--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h5>
+<h1 class="logo-font mb-4 text-white">{% trans "Verify Your E-mail Address" %}</h1>
 <hr>
 
 {% url 'account_email' as email_url %}
