--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,6 +69,12 @@ body {
 input[name='q']::placeholder {
     color: gray;
 }
+p {
+    color: #fff;
+}
+.text-muted {
+    color: silver;
+}
 /*---------------------------Bootstrap Toast messages */
 .message-container {
     position: fixed;
