--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -5,7 +5,9 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<hr>
+<h1 class="logo-font mb-4 text-white">{% trans "Account Inactive" %}</h1>
+<hr>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
