--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Password Reset" %}</h5>
+<h1 class="logo-font mb-4 text-white">{% trans "Password Reset" %}</h1>
 <hr>
 
     {% if user.is_authenticated %}
