--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Password Reset" %}</h5>
+<h5 class="logo-font mb-4 bg-dark text-white">{% trans "Password Reset" %}</h5>
 <hr>
     
     {% if user.is_authenticated %}
