--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
 <hr>
-<h5 class="logo-font mb-4">{% trans "Change Password" %}</h5>
+<h5 class="logo-font mb-4 bg-dark text-white">{% trans "Change Password" %}</h5>
 <hr>
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
