--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
                 {% include 'includes/main-nav.html' %} 
             </nav>
             <div class="col-12 bg-danger text-center text-white">
-                <h4 class="logo-font my-1">Due to circumstances delevery might take a bit londer than expected</h4>
+                <h4 class="logo-font my-1">Due to circumstances delivery might take a bit longer than expected</h4>
             </div>
             <div class="col-12 bg-dark text-center text-white">
                 <h4 class="logo-font my-1">Free delivery on orders over €{{ free_delivery_threshold }}!</h4>
